# mswinrtvid

./: CMakeLists.txt
MSWinRTVideo/: CMakeLists.txt
